# textgen

./: CMakeLists.txt  README.md
rsrc/: gone.txt  hamlet.txt  lorem_ipsum.txt  tolstoy.txt
src/: main.cpp  markov.cpp  markov.h
test/: main.cpp
